images_DATA = \
	confidential-stamp.jpg		\
	draft-paper.png			\
	draft-stamp.jpg			\
	midnight-stars.jpg		\
	minus.png			\
	paper.png			\
	plus.png			\
	rect.png			\
	ribbon.jpg			\
	texture.png			\
	working.png			\
	world_map-960.png

EXTRA_DIST = 				\
	README				\
	empty.xpm			\
	jump.xpm			\
	$(images_DATA)

-include $(top_srcdir)/git.mk
